<resources>
    <string name="app_name">Online Registration</string>
    <string name="title_activity_register">CREATE STUDENT</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_full_name">Full Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_student_number">Student Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_create">Create</string>
    <string name="action_view">View Students</string>
</resources>