<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="RegisterActivity"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imgHeader"
            android:layout_width="340dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/title_activity_register"

             />


<!--        <TextView-->
<!--            android:id="@+id/registerHeader"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="@dimen/activity_horizontal_margin"-->
<!--            android:text="@string/title_activity_register"-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="@color/colorText"-->
<!--            android:textSize="@dimen/header_text"-->
<!--            />-->

        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/prompt_full_name"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText" />

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/prompt_email"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/prompt_phone"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText" />

        <TextView
            android:id="@+id/tvStudentNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/prompt_student_number"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText" />

        <EditText
            android:id="@+id/etStudentNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText" />


        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/prompt_password"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorText"/>

        <Button
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_create"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/round_button"
        android:textColor="@color/whiteText"
        android:textSize="@dimen/buttonText"/>

        <Button
            android:id="@+id/btnView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_view"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/round_button"
            android:textColor="@color/whiteText"
            android:textSize="@dimen/buttonText"/>

    </LinearLayout>
</ScrollView>